Closed
Bug 281026
Opened 21 years ago
Closed 21 years ago
Script warning - continue fails to continue
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: bc, Assigned: vhaarr+bmo)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
|
838 bytes,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
Run the ecma/Date/15.9.5.10-2.js test
Expected result:
Stop Script dialog appears,
click continue to finish script
Actual result :
Stop Script dialog appears,
click continue,
dialog reappears immediately.
I think bug 145523 caused this by removing code to reset the branch call back
time. This worked in a 2005-02-02/winxp trunk build but does not in a
2005-02-03/winxp trunk build.
// Allow the script to run this long again
ctx->mBranchCallbackTime = PR_Now();
| Assignee | ||
Comment 1•21 years ago
|
||
Yes, I have no idea why I removed that line, sorry.
I'll produce a patch tonight.
Assignee: general → bugmail
| Assignee | ||
Comment 2•21 years ago
|
||
The problem was that I based my patch on the earlier patch in bug 145523, and
jst's review comments in
<https://bugzilla.mozilla.org/show_bug.cgi?id=145523#c16>. Between then and
now, nallen created <https://bugzilla.mozilla.org/attachment.cgi?id=141103> and
jst r/sr'ed it.
Attachment #173492 -
Flags: superreview?(jst)
Attachment #173492 -
Flags: review?(jst)
Comment 3•21 years ago
|
||
Comment on attachment 173492 [details] [diff] [review]
version 0.1 (Checked in)
Duh, yeah. r+sr=jst
Attachment #173492 -
Flags: superreview?(jst)
Attachment #173492 -
Flags: superreview+
Attachment #173492 -
Flags: review?(jst)
Attachment #173492 -
Flags: review+
Comment on attachment 173492 [details] [diff] [review]
version 0.1 (Checked in)
Checking in nsJSEnvironment.cpp;
/cvsroot/mozilla/dom/src/base/nsJSEnvironment.cpp,v <-- nsJSEnvironment.cpp
new revision: 1.241; previous revision: 1.240
done
Attachment #173492 -
Attachment description: version 0.1 → version 0.1 (Checked in)
| Assignee | ||
Comment 5•21 years ago
|
||
Thanks for the reviews and checkin!
FIXED.
bc: can you verify?
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 6•21 years ago
|
||
seems to work in a fresh build. I will verify with tomorrow's nightly. Thanks!
| Reporter | ||
Comment 7•21 years ago
|
||
verified fixed in 20050210 winxp build. thanks.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•