Bug 281026 Script warning - continue fails to continue p=bugmail@q1n.org r=jst sr=jst